[project]
name = "day10-reliability-agent-lab"
version = "0.1.0"
description = "Production-style skeleton for LLM agent reliability: circuit breakers, caching, metrics, and chaos testing."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "rich>=13.7",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10", "types-PyYAML>=6.0", "hypothesis>=6.100"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["todo: tests that should pass after students implement TODOs"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
